projects/examples/source/03.19.cpp
///////////////////////////////////////////////////////////////////////////////////////

// chapter : Object-Oriented Programming

///////////////////////////////////////////////////////////////////////////////////////

// section : Dynamic Polymorphism

///////////////////////////////////////////////////////////////////////////////////////

// content : Downcasting Type Conversions
//
// content : Polymorphic Objects
//
// content : Operators static_cast and dynamic_cast

///////////////////////////////////////////////////////////////////////////////////////

// support : Boost.Conversion

///////////////////////////////////////////////////////////////////////////////////////

#include <cassert>

///////////////////////////////////////////////////////////////////////////////////////

class Entity 
{
public :

	virtual ~Entity() = default;
};

///////////////////////////////////////////////////////////////////////////////////////

class Client : public Entity {};

class Server : public Entity {};

///////////////////////////////////////////////////////////////////////////////////////

int main()
{
	auto x = 1.0;

//  -----------------------------------------------------------------------------------

	assert(static_cast < int > (x) == 1); // support : compiler-explorer.com

//  -----------------------------------------------------------------------------------

	Entity * entity = new Client;

//  -----------------------------------------------------------------------------------

	assert( static_cast < Client * > (entity) != 0);

//	assert( static_cast < Server * > (entity) != 0); // error

//  -----------------------------------------------------------------------------------

	assert(dynamic_cast < Client * > (entity) != 0); // support : compiler-explorer.com

	assert(dynamic_cast < Server * > (entity) == 0);

//  -----------------------------------------------------------------------------------

	delete entity;

//  -----------------------------------------------------------------------------------

//	assert(dynamic_cast < int > (x) == 1); // error
}

///////////////////////////////////////////////////////////////////////////////////////